# ftw-dataset-tools

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: stac-extension.md
docs/plans/: 2026-01-17-imagery-pipeline-design.md
plans/: feat-select-images-planet.md  feat-stac-imagery-workflow-improvements.md
src/ftw_dataset_tools/: __init__.py  cli.py
src/ftw_dataset_tools/api/: __init__.py  boundaries.py  dataset.py  dataset_summary.py  field_stats.py  ftw_grid.py  geo.py  grid.py  masks.py  splits.py  stac.py  stac_items.py
src/ftw_dataset_tools/api/imagery/: __init__.py  catalog_ops.py  cloud_analysis.py  crop_calendar.py  download_workflow.py  image_download.py  nodata_analysis.py  planet_client.py  planet_download.py  planet_selection.py  progress.py  scene_selection.py  selection_workflow.py  settings.py  stac_child_items.py  thumbnails.py
src/ftw_dataset_tools/commands/: __init__.py  add_field_stats.py  create_boundaries.py  create_chips.py  create_dataset.py  create_dataset_summary.py  create_ftw_grid.py  create_masks.py  create_splits.py  download_images.py  download_images_planet.py  get_grid.py  refine_cloud_cover.py  reproject.py  select_images.py  select_images_planet.py
tests/: __init__.py  conftest.py  test_grid.py
tests/test_api/: __init__.py  test_boundaries.py  test_dataset.py  test_dataset_summary.py  test_field_stats.py  test_ftw_grid.py  test_geo.py  test_grid.py  test_masks.py  test_reproject.py  test_splits.py  test_stac.py
tests/test_api/test_imagery/: __init__.py  conftest.py  test_download_workflow.py  test_image_download.py  test_planet_download.py  test_planet_selection.py  test_selection_workflow.py  test_stac_child_items.py
tests/test_cli/: __init__.py  test_add_field_stats.py  test_create_boundaries.py  test_create_chips.py  test_create_dataset.py  test_create_ftw_grid.py  test_create_masks.py  test_get_grid.py
