[project]
name = "ftw-dataset-tools"
version = "0.1.0"
description = "CLI tools for creating Fields of the World benchmark dataset"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Chris Holmes" }]
keywords = ["ftw", "fields-of-the-world", "geospatial", "machine-learning", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "click>=8.1.0",
    "duckdb>=1.4.1",
    "geopandas>=1.0.0",
    "geoparquet-io>=0.9.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "pystac>=1.10.0",
    "pystac-client>=0.7.0",
    "rasterio>=1.3.0",
    "rustac[arrow]>=0.3.0",
    "shapely>=2.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
ftwd = "ftw_dataset_tools.cli:cli"

[project.urls]
Homepage = "https://github.com/cholmes/ftw-dataset-tools"
Repository = "https://github.com/cholmes/ftw-dataset-tools"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ftw_dataset_tools"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (needed for Click)
]

[tool.ruff.lint.isort]
known-first-party = ["ftw_dataset_tools"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests requiring network access (deselect with '-m \"not network\"')",
]

[tool.coverage.run]
source = ["src/ftw_dataset_tools"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.vulture]
min_confidence = 80
paths = ["src/ftw_dataset_tools", "tests"]
sort_by_size = true
verbose = false

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.7",
    "vulture>=2.14",
]
